<resources>
    <string name="app_name">Kapy</string>
    <string name="title_activity_face_recognition">FaceRecognition</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="greeting_header_text">Welcome to KapyMessenger!</string>
    <string name="greeting_text">This is KapyMessenger - fast and reliable messenger made by few nerds that won\'t sell your data to anyone! But our main feature is searching emojis just by your face expression. Join and enjoy!</string>
    <string name="register_text">Enter your phone number to continue registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_messenger">Chats</string>
    <string name="title_chats">Chats</string>
    <string name="title_ignore_list">Ignore List</string>
    <string name="add_dialog">add dialog</string>
    <string name="main_image">main image</string>
    <string name="additional">Additional</string>
    <string name="scan_qr_code">Scan QR-code</string>
    <string name="ignore_list">Ignore List</string>
    <string name="avatar_of_user">avatar of user</string>
    <string name="back_to_dialogs">back_to_dialogs</string>
    <string name="username">Username</string>
    <string name="offline">Offline</string>
    <string name="message">Message…</string>
    <string name="send_icon">send_icon</string>
    <string name="continue_text">Continue</string>
    <string name="logo">Logo</string>
    <string name="setup_profile">Setup your profile</string>
    <string name="audio_call_button">audio call button</string>
    <string name="video_cal_button">video cal button</string>
    <string name="log_out">Log Out</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="communicate">Communicate</string>
    <string name="management">Management</string>
    <string name="button">button</string>
    <string name="calls">Calls</string>
    <string name="share_qr_code">Share QR-code</string>
    <string name="qr">QR</string>
    <string name="qr_code">nigger</string>
    <string name="your_id_is">Your ID is</string>
    <string name="title_activity_calls_list">Calls</string>
    <string name="online">Online</string>
    <string name="switch_app_theme">Switch app theme</string>
</resources>