<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/drawer_qr"
                android:icon="@drawable/qr_icon"
                android:title="@string/scan_qr_code" />
            <item
                android:id="@+id/theme_switch"
                android:icon="@drawable/sun"
                android:title="@string/switch_app_theme" />
                <item
                android:id="@+id/ignore_list"
                android:icon="@drawable/message_icon"
                android:title="@string/ignore_list" />

        </menu>
    </item>

    <item android:title="@string/management">
        <menu>
            <item
                android:id="@+id/notes"
                android:icon="@drawable/notes"
                android:title="@string/notes" />
            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/settings" />

            <item
                android:id="@+id/drawer_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/log_out" />

        </menu>
    </item>
</menu>